@@ -1,3 +1,3 @@
--lpq -lpq++ -lpq -lssl -lcrypto -lkrb5 -lcrypt -lresolv -lnsl  
+-lpq -lpq++ -lpq -lssl -lcrypto  -lcrypt -lresolv -lnsl  
 
 
